# sans

./: .gitignore  DETERMINISM.md  NOTICE  README.md  SPRINT_ADD_DROP.md  TRADEMARK.md  pyproject.toml  run_hello.ps1  run_hello.sh
.cursor/plans/: sans_kernel_mutation_v0.1.1_e879640f.plan.md  sprint_1_ir_mutation_surface_c527a0dd.plan.md
.github/workflows/: ci.yml
demo/: demo.ps1  demo.sh  hello.sans
demo/audit_demo/: analysis.sas  run_demo.ps1
demo/basic_demo/: hello.sans
demo/proc_demo/: proc_demo.sas
demo/run_diff_clin_demo/: demo_high.sans  demo_high.schema.lock.json  demo_low.sans  lb.csv
demo/sans_script/: demo.sans  in.csv
docs/: AGENTS.md  ARCHITECTURE.md  BIG_PIC.md  ERROR_CODES.md  EXPR_CONTRACT.md  FMT_CONTRACT.md  FMT_STYLE_V0.md  GRAPH_JSON.md  HELLO_GALAXY.md  IR_CANONICAL_PARAMS.md  IR_CANON_RULES.md  IR_SPEC.md  MISSION_BRIEF.MD  MUTATION_CONTRACT.md  MUTATION_SAFE_EXECUTION_SUBSTRATE.md  PATHWAY.md  PIPELINE_ALGEBRA.md  RECOGNIZED_PATTERNS.md  REPORT_CONTRACT.md  REPORT_SCHEMA.json  SANS_BUNDLE_CONTRACT.md  SANS_CONTRACT.MD  SAS_INGESTION_CONTRACT.md  SCHEMA_LOCK_V0.md  SUBSET_SPEC.md  TEST_CONFORMANCE.md  TYPES_V0.md  VALIDATOR_RULES.md  amendment_request_v1.md  sans-ir-v0.1-schema  sans_script_cleanup.md
docs/mutation/: AMENDMENT_REQUEST_V1.md  MUTATION_CONTRACT_V0_1.md
examples/: report.ok.json  report.refused.json
sans/sans/: __main__.py  _loc.py  bundle.py  compiler.py  errors.py  evidence.py  expr.py  expr_contract.py  frontend.py  graph.py  hash_utils.py  ir.py  lineage.py  parser_expr.py  path_utils.py  preprocessor.py  recognizer.py  runtime.py  schema_infer.py  schema_lock.py  type_infer.py  types.py  validator_sdtm.py  xpt.py
sans/tests/: conftest.py  test_audit.py  test_bundle_contract_golden.py  (+47 more)
scripts/: run_tier0.ps1  run_tier0.sh
tests/: test_amendment_schemas.py  test_apply_amendment_refusals.py  test_apply_amendment_success.py  test_bundle_contract_v0_1.py  test_csv_typed_coercion_evidence.py  test_decimal_normalization.py  test_emit_ir.py  test_graph_artifact.py  test_ir_adapter_canon.py  test_ir_canonicalization.py  test_ir_execution_equivalence.py  test_ir_roundtrip.py  test_ir_structural_invariants.py  test_legacy_integration.py  test_transform_class_id.py  test_v1_invariants.py  test_vars_graph_artifact.py
tmp_bundle_test/: report.json
tmp_run_test/: report.json
(+87 files in other folders)
